# ProductiveMining

./: .dockerignore  .env.example  .gitignore  .replit  AI.md  APP_ARCHITECTURE.md  App.tsx  DEPLOYMENT.md  DEPLOYMENT_PACKAGE.md  Dockerfile  EXECUTIVE_SUMMARY.md  GITHUB_DEPLOYMENT.md  IMPLEMENTATION_GUIDE.md  MAINNET_DEPLOYMENT.md  MINER_SUBMISSION_SYSTEM.md  PROJECT_DESIGN_NEXT_LEVEL.md  QDT_MEMORY.md  QUANTUM_ALGORITHMS.md  README.md  REPOSITORY_PACKAGE.md  TECHNICAL_SPECIFICATIONS.md  UPLOAD_INSTRUCTIONS.md  app-config.json  block-utils.ts  data-management.tsx  discoveries.json  docker-compose.debug.yml  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.js  educational-section.tsx  init.sql  institutional-validation.tsx  mockApi.ts  nginx.conf  package-lock.json  package.json  performance-sparklines.tsx  pyproject.toml  real-computational-dashboard.tsx  (+11 more)
assets/: main-38aIBRrJ.js  main-BUoTBX-L.css
attached_assets/: Pasted--15-847-23-PROD-0x742d-3b8D-Enhanced-Security-Dashboard-Cryptographic-security-powered-by-real-ma-1751561342552_1751561342553.txt  Pasted--IMMEDIATE-FIX-QDT-Memory-Management-Integration-Replaces-memory-intensive-mining-with-QDT-1751482812579_1751482812579.txt  Pasted--QDT-Enhanced-Memory-Management-Implementation-Guide-Solving-Node-js-Memory-Exhaustion-with--1751910898758_1751910898759.txt  Pasted--Real-Mathematical-Engines-Actual-Mathematical-Computation-Implements-tractable-mathematical-co-1751578547172_1751578547172.txt  (+6 more)
github-pages-build/: .gitignore  DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json  (+3 more)
(+284 files in other folders)
