[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "databases>=0.9.0",
    "fastapi>=0.115.14",
    "numpy>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "scipy>=1.16.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
